# OFLauncher

./: .gitignore  CMakeLists.txt  LICENSE  OFLauncher.pro  README.md  TODO
cmake/: FindAPR.cmake  FindAPRutil.cmake  FindExpat.cmake  FindIconv.cmake  FindSQLite.cmake  FindSVN.cmake  FindSVNclient.cmake  FindSVNdelta.cmake  FindSVNdiff.cmake  FindSVNfs.cmake  FindSVNfsfs.cmake  FindSVNfsutil.cmake  FindSVNfsx.cmake  FindSVNra.cmake  FindSVNralocal.cmake  FindSVNraserf.cmake  FindSVNrasvn.cmake  FindSVNrepos.cmake  FindSVNsubr.cmake  FindSVNwc.cmake
inc/: oflauncher.hpp  oflauncher.hpp.bak
res/: images.qrc
res/images/: README.md
src/: CMakeLists.txt  common.c  common.h  config.c  config.h  main.cpp  oflauncher.cpp  oflauncher.cpp.bak  steam.c  steam.h  svn.c  svn.h
src/cli/: CMakeLists.txt  command.h  main.c
src/qt/: CMakeLists.txt  images.qrc  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  settings.cpp  settings.hpp  settings.ui  workers.cpp  workers.hpp
src/qt/res/: version.rc.in
